made changes to scrollbar 10px width and hover color, doesn't work correctly in Firefox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,22 +28,22 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px #000000;
-  border-radius: 2px;
+  border-radius: 0px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #000000;
-  border-radius: 2px;
+  background: #202327;
+  border-radius: 0px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #000000;
+  background: #1d9bf0;
 }
